--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/styles.scss">
         <script src="main.js"></script>
         <title>Enlock ITS - Home</title>
     </head>
@@ -40,7 +40,7 @@
         <div class="home-background-main">
             <h1>ENLOCK ITS</h1>
             <h2>ENLOCK YOUR BUSSINESSES TRUE POTENTIAL<br>WITH ENLOCK I.T.S</h2>
-            <a class="whatWeOffer-Button" href="#whatweOffer">What We Offer</a>
+            <a class="whatWeOffer-Button" href="#whatweOffer" id="WhatWeOfferButton">What We Offer</a>
         </div>
         <div class="whatWeOffer" id="whatweOffer">
             <h1>What We Offer</h1>
