--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="home-background-main">
             <h1>ENLOCK ITS</h1>
-            <h2>ENLOCK YOUR BUSSINESSES TRUE POTENTIAL<br>WITH ENLOCK I.T.S</h2>
+            <h2>ENLOCK YOUR BUSINESSES TRUE POTENTIAL<br>WITH ENLOCK I.T.S</h2>
             <a class="whatWeOffer-Button" href="#whatweOffer" id="WhatWeOfferButton">What We Offer</a>
         </div>
         <div class="whatWeOffer" id="whatweOffer">
