--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -2,55 +2,72 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="styles/styles.css">
+        <link rel="icon" href="favicon.ico">
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.3/jquery.min.js"></script>
+        <script src="responsiveslides.js"></script>
         <script src="main.js"></script>
         <title>Enlock ITS - Home</title>
     </head>
     <body>
-        <div class="topbar-container">
-            <div class="topbar">
-                <div class="topbar-logo">
-                   <a><img src="resources/20a9b04fb7dfcc77a3150daa16491cd1.png" alt=""></a>
+        <div class="top">
+            <div class="topbar-container">
+                <div class="topbar">
+                    <nav>
+                        <div class="topbar-logo">
+                            <a href="">
+                               <img src="resources/Logo.png" alt="logo">
+                            </a>
+                        </div>
+                        <div class="topbar-rightContainer">
+                            <h3 class="topbar-phonenumber">020-4166-8463</h3>
+                            <ul>
+                                <li>
+                                    <a href="">Home</a>
+                                </li>
+                                <li>
+                                    <a href="">Services</a>
+                                </li>
+                                <li>
+                                    <a href="">About</a>
+                                </li>
+                                <li>
+                                    <a href="">Case Studies</a>
+                                </li>
+                                <li>
+                                    <a href="">News</a>
+                                </li>
+                                <li>
+                                    <a href="">Contact</a>
+                                </li>
+                            </ul>
+                        </div>
+                    </nav>
                 </div>
-                <nav>
-                    <h3 class="topbar-phonenumber">020-4166-8463</h3>
-                    <ul>
-                        <li>
-                            <a href="">Home</a>
-                        </li>
-                        <li>
-                            <a href="">Services</a>
-                        </li>
-                        <li>
-                            <a href="">About</a>
-                        </li>
-                        <li>
-                            <a href="">Case Studies</a>
-                        </li>
-                        <li>
-                            <a href="">News</a>
-                        </li>
-                        <li>
-                            <a href="">Contact</a>
-                        </li>
-                    </ul>
-                </nav>
             </div>
         </div>
+        <ul class="rslides">
+            <li><img src="resources/city.jpg" alt=""></li>
+            <li><img src="resources/coding1.jpg" alt=""></li>
+            <li><img src="resources/talking-business.jpg" alt=""></li>
+        </ul>
         <div class="home-background-main">
             <h1>ENLOCK ITS</h1>
             <h2>ENLOCK YOUR BUSINESSES TRUE POTENTIAL<br>WITH ENLOCK I.T.S</h2>
-            <a class="whatWeOffer-Button" href="#whatweOffer" id="WhatWeOfferButton">What We Offer</a>
+            <a class="whatWeOffer-Button" href="#whatweOffer" id=""><img src="https://img.icons8.com/windows/32/000000/chevron-down.png"/></a>
         </div>
         <div class="whatWeOffer" id="whatweOffer">
             <h1>What We Offer</h1>
             <p>At Enlock we are dedicated to getting the job done no matter the task at hand, and finishing
                 the job with adaptability for future needs.
+                <br>
             </p>
             <div class="whatWeOfferPT2">
+                    <img src="resources/Logo.png">
+                
                 <h2>A FUTURE FOCUSED TEAM, PROVIDING<br>
                     PROFESSIONAL IT SUPPORT</h2>
-                    <hr>
                 <p>With more than three decades’ experience, we have the skills, expertise and<br>
                     capability to help you navigate all aspects of computing technology.<br>
                     <br>
@@ -75,4 +92,7 @@
             </div>
           </div>
     </body>
+    <footer>
+
+    </footer>
 </html>
