Basic Services page

--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -3,15 +3,12 @@
     <head>
         <!--Online CSS Librarys-->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        <link rel="stylesheet" href="styles/styles.css">
+        <link rel="stylesheet" href="styles/secondarystyles.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
         <!--Browser Icon for web page-->
         <link rel="icon" href="favicon.ico">
-        <!--Scripts in scripts Folder-->
-        <script src="Scripts/AOSscript.js"></script>
         <script src="Scripts/GoogleAPI1.js"></script>
-        <script src="Scripts/responsiveSlides.min.js"></script>
         <script src="Scripts/main.js"></script>
         <title>Enlock ITS - Home</title>
     </head>
@@ -53,7 +50,34 @@
             </div>
         </div>
         <div class="body-wrapper">
-
+            <div class="whatWeOffer">
+                <div class="whatWeOffer-wrapper">
+                    <div class="container">
+                        <div class="row">
+                            <div class="col-xl">
+                                <h1>
+                                    Tailored IT Solutions
+                                </h1>
+                                <p>
+                                    At Enlock we understand that not everything with technology can be straight forward, that is why <br>
+                                    we dedicate ourselves to being able to undertake any sort of task no matter the problem, being honest<br>
+                                    and trustworthy communicating with clients along the way.
+                                </p>
+                            </div>
+                            <div class="col-xl">
+                                <h1>
+                                    Tailored IT Solutions
+                                </h1>
+                                <p>
+                                    At Enlock we understand that not everything with technology can be straight forward, that is why <br>
+                                    we dedicate ourselves to being able to undertake any sort of task no matter the problem, being honest<br>
+                                    and trustworthy communicating with clients along the way.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
           <script>
             AOS.init();
