--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -119,12 +119,15 @@
                     <div class="about-Enlock-Home-text">
                         <h1>About Enlock</h1>
                         <h4>Chris Cook</h4>
+                        
+                        <img src="resources/blank-portrait.jpg">
                     </div>
                 </div>
                 <div class="col-xl about-Enlock-Home">
                     <div class="about-Enlock-Home-text">
                         <h1>About Enlock</h1>
                         <h4>Isaac Lyne</h4>
+                        <img src="resources/blank-portrait.jpg">
                     </div>
                 </div>
           </div>
