--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -107,7 +107,7 @@
               <div class="col-xl home-columns">
                 <h3>CLIENT TESTIMONIES</h3>
                 <img src="resources/review.svg">
-                <p><span style="font-weight: bold;">Tony Lyne: </span>"Joining up with Enlock to create our business website was something amazing for our business<br> they contantly communicated with us "</p>
+                <p><span style="font-weight: bold;">{placeholer} Tony Lyne: </span>"Joining up with Enlock to create our business website was something amazing for our business<br> they contantly communicated with us "</p>
             </div>
             </div>
           </div>
@@ -142,11 +142,15 @@
             <div class="row">
                 <div class="col-xl">
                     <h3>SIGN UP FOR OUR NEWSLETTER:</h3>
+                    <form>
+                       Email: <input> <button>Sign Up</button>
+                    </form>
                     
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>0800SuckYourMum</p>
+                    <p>Ph: 02041668463<br>
+                    Email: Isaactimothylyne@gmail.com</p>
                 </div>
             </div>
         </div>
