--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -52,19 +52,8 @@
         <div class="body-wrapper">
             <div class="whatWeOffer">
                 <div class="whatWeOffer-wrapper">
+                    <img src="resources/coding.jpg" class="Services-Banner">
                     <div class="container">
-                        <div class="row">
-                            <div class="col-xl">
-                                <h1>
-                                    Tailored IT Solutions
-                                </h1>
-                                <p>
-                                    At Enlock we understand that not everything with technology can be straight forward, that is why <br>
-                                    we dedicate ourselves to being able to undertake any sort of task no matter the problem, being honest<br>
-                                    and trustworthy communicating with clients along the way.
-                                </p>
-                            </div>
-                            <div class="col-xl">
                                 <h1>
                                     Tailored IT Solutions
                                 </h1>
