--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -62,6 +62,12 @@
             <h2>ENLOCK YOUR BUSINESSES TRUE POTENTIAL<br>WITH ENLOCK I.T.S</h2>
             <a class="whatWeOffer-Button animate__bounce" href="#whatweOffer" id=""><img src="https://img.icons8.com/windows/32/000000/chevron-down.png"/></a>
         </div>
+        <div class="opening-statement">
+            <p style="font-weight: bold;">
+                Your business is your lifes resourcer, so it is to your employees.
+                So why wouldn't you want your business work experience to be the best and most streamlined it can be.
+            </p>
+        </div>
         <div class="whatWeOffer" id="whatweOffer">
             <div data-aos="zoom-in">
                 <h1>What We Offer</h1>
@@ -155,4 +161,5 @@
             </div>
         </div>
     </footer>
+    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
 </html>
