--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -77,15 +77,11 @@
             <div class="row">
                 <div class="col-xl">
                     <h3>SIGN UP FOR OUR NEWSLETTER:</h3>
-                    <form>
-                       Email: <input> <button>Sign Up</button>
-                    </form>
                     
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>Ph: 02041668463<br>
-                    Email: Isaactimothylyne@gmail.com</p>
+                    <p>0800SuckYourMum</p>
                 </div>
             </div>
         </div>
