Bio Set up for Chris
Go Hard

--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -133,7 +133,10 @@
                     <div class="about-Enlock-Home-text">
                         <h1>About Enlock</h1>
                         <h4>Isaac Lyne</h4>
-                        <img src="resources/blank-portrait.jpg">
+                        <img src="resources/PhotoOfIsaac.jpg" style="float: left;">
+                        <p>Growing up in an environment based around IT, and having a full Server Rack in his home set him up at a young age to start practice in IT.
+                            
+                        </p>
                     </div>
                 </div>
           </div>
