Isaacs Bio Done

--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -126,16 +126,24 @@
                         <h1>About Enlock</h1>
                         <h4>Chris Cook</h4>
                         
-                        <img src="resources/blank-portrait.jpg">
+                        <img src="resources/blank-portrait.jpg" style="float: left;">
+                        <p class="bio">
+
+                        </p>
                     </div>
                 </div>
                 <div class="col-xl about-Enlock-Home">
                     <div class="about-Enlock-Home-text">
                         <h1>About Enlock</h1>
                         <h4>Isaac Lyne</h4>
+
                         <img src="resources/PhotoOfIsaac.jpg" style="float: left;">
-                        <p>Growing up in an environment based around IT, and having a full Server Rack in his home set him up at a young age to start practice in IT.
-                            
+                        <p class="bio">Growing up in an environment based around IT, and having a full Server Rack in his own home, Isaac was set up at a young age to start practice in IT.
+                            Starting software development at the age of 11 Isaac has had 7 years of experience creating programs in console, and creating windows programs, even integrating 
+                            powershell into some programs for Deptive.<br><br>
+                            Starting Study at the age of 18 in 2020, completing IT Essentials certificate at the Universal College of Learning in Palmerston North, flying through to continue into the Bachelor 
+                            course. <br><br>
+                            In Isaac's free time he likes to produce music, and mix and release with his partner Bailey Kauri, Modify his car in any way possible, and do home improvements.
                         </p>
                     </div>
                 </div>
