--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -119,11 +119,10 @@
           </div>
 
           <hr>
-
+          <h1 class="about-header">About Enlock</h1>
             <div class="row">
                 <div class="col-xl about-Enlock-Home">
                     <div class="about-Enlock-Home-text">
-                        <h1>About Enlock</h1>
                         <h4>Chris Cook</h4>
                         
                         <img src="resources/blank-portrait.jpg" style="float: left;">
@@ -132,9 +131,8 @@
                         </p>
                     </div>
                 </div>
-                <div class="col-xl about-Enlock-Home">
+                <div class="col-xl about-Enlock-Home dark">
                     <div class="about-Enlock-Home-text">
-                        <h1>About Enlock</h1>
                         <h4>Isaac Lyne</h4>
 
                         <img src="resources/PhotoOfIsaac.jpg" style="float: left;">
@@ -147,6 +145,11 @@
                         </p>
                     </div>
                 </div>
+          </div>
+          <hr>
+          <!--TODO:  Set up contact form-->
+          <div class="home-contact">
+
           </div>
 
           <!--Important!!!! For Scroll animations to function-->
@@ -166,8 +169,8 @@
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>Ph: 02041668463<br>
-                    Email: Isaactimothylyne@gmail.com</p>
+                    <p>Isaac on Phone: 02041668463<br>
+                    Isaac on Email: Isaactimothylyne@gmail.com</p>
                 </div>
             </div>
         </div>
