--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -6,6 +6,8 @@
         <link rel="stylesheet" href="styles/secondarystyles.css">
         <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+        <!--Icons-->
+        <script src="https://kit.fontawesome.com/50192be51f.js" crossorigin="anonymous"></script>
         <!--Browser Icon for web page-->
         <link rel="icon" href="favicon.ico">
         <script src="Scripts/GoogleAPI1.js"></script>
@@ -29,7 +31,7 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="">Services</a>
+                                    <a href="services.html">Services</a>
                                 </li>
                                 <li>
                                     <a href="">About</a>
@@ -54,20 +56,30 @@
                 <div class="Services-wrapper">
                     <img src="resources/coding.jpeg" class="Services-Banner">
                     <div class="container">
-                                <h1>
-                                    Tailored IT Solutions
-                                </h1>
-                                <p>
-                                    At Enlock we understand that not everything with technology can be straight forward, that is why <br>
-                                    we dedicate ourselves to being able to undertake any sort of task no matter the problem, being honest<br>
-                                    and trustworthy communicating with clients along the way.
-                                </p>
+                        <div class="row">
+                            <div class="col-xl">
+                                <i class="fas fa-desktop fa-7x"></i>
+                                <h1>Building Custom PC</h1>
+                                <p> Our teams extensive knowledge of part compatibility and what is required for a PC to perform your required task, makes us a perfect choice to build your needed custom PC's whatever the task it shall perform.</p>
+                            </div>
+                            <div class="col-xl">
+                                <i class="fas fa-database fa-7x"></i>
+                                <h1>Database creation</h1>
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-xl">
+
+                            </div>
+                            <div class="col-xl">
+                                
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
+                    
           <script>
             AOS.init();
         </script>
