--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -35,16 +35,16 @@
                                     <a href="services.html">Services</a>
                                 </li>
                                 <li>
-                                    <a href="">About</a>
+                                    <a href="about.html">About</a>
                                 </li>
                                 <li>
-                                    <a href="">Case Studies</a>
+                                    <a href="case studies.html">Case Studies</a>
                                 </li>
                                 <li>
-                                    <a href="">News</a>
+                                    <a href="news.html">News</a>
                                 </li>
                                 <li>
-                                    <a href="">Contact</a>
+                                    <a href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
