--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -53,15 +53,13 @@
             <div class="Services">
                 <div class="Services-wrapper">
                     <img src="resources/coding.jpeg" class="Services-Banner">
-                    <div class="container">
-                                <h1>
-                                    Tailored IT Solutions
+                    <div class="container about-page">
+                                <h1 style="text-align: center; font-size: 50px;">
+                                    About ENlock IT Solutions!
                                 </h1>
-                                <p>
-                                    At Enlock we understand that not everything with technology can be straight forward, that is why <br>
-                                    we dedicate ourselves to being able to undertake any sort of task no matter the problem, being honest<br>
-                                    and trustworthy communicating with clients along the way.
-                                </p>
+                                <div class="about-body">
+                                    <h2>Our Story</h2>
+                                </div>
                             </div>
                         </div>
                     </div>
