--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -129,6 +129,8 @@
                         <p class="bio">
 
                         </p>
+                        <!--Modal to show information-->
+                        <button>Contact Chris</button>
                     </div>
                 </div>
                 <div class="col-xl about-Enlock-Home dark">
@@ -138,11 +140,13 @@
                         <img src="resources/PhotoOfIsaac.jpg" style="float: left;">
                         <p class="bio">Growing up in an environment based around IT, and having a full Server Rack in his own home, Isaac was set up at a young age to start practice in IT.
                             Starting software development at the age of 11 Isaac has had 7 years of experience creating programs in console, and creating windows programs, even integrating 
-                            powershell into some programs for Deptive.<br><br>
+                            powershell into some programs for Deptive. For a few of these years developing multiplayer games in Unity.<br><br>
                             Starting Study at the age of 18 in 2020, completing IT Essentials certificate at the Universal College of Learning in Palmerston North, flying through to continue into the Bachelor 
                             course. <br><br>
                             In Isaac's free time he likes to produce music, and mix and release with his partner Bailey Kauri, Modify his car in any way possible, and do home improvements.
                         </p>
+                        <!--Modal to show information-->
+                        <button class="contact-button" style="margin-left: 10px;">Contact Isaac</button>
                     </div>
                 </div>
           </div>
@@ -152,7 +156,7 @@
 
           </div>
 
-          <!--Important!!!! For Scroll animations to function-->
+          <!--Important!!!! For Scroll animations to function DO NOT DELETE OR REMOVE-->
           <script>
             AOS.init();
         </script>
