--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -29,19 +29,19 @@
                                     <a href="index.html">Home</a>
                                 </li>
                                 <li>
-                                    <a href="">Services</a>
+                                    <a href="services.html">Services</a>
                                 </li>
                                 <li>
-                                    <a href="">About</a>
+                                    <a href="about.html">About</a>
                                 </li>
                                 <li>
-                                    <a href="">Case Studies</a>
+                                    <a href="case studies.html">Case Studies</a>
                                 </li>
                                 <li>
-                                    <a href="">News</a>
+                                    <a href="news.html">News</a>
                                 </li>
                                 <li>
-                                    <a href="">Contact</a>
+                                    <a href="contact.html">Contact</a>
                                 </li>
                             </ul>
                         </div>
@@ -59,6 +59,7 @@
                                 </h1>
                                 <div class="about-body">
                                     <h2>Our Story</h2>
+                                    
                                 </div>
                             </div>
                         </div>
