--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -129,8 +129,6 @@
                         <p class="bio">
 
                         </p>
-                        <!--Modal to show information-->
-                        <button>Contact Chris</button>
                     </div>
                 </div>
                 <div class="col-xl about-Enlock-Home dark">
@@ -145,8 +143,6 @@
                             course. <br><br>
                             In Isaac's free time he likes to produce music, and mix and release with his partner Bailey Kauri, Modify his car in any way possible, and do home improvements.
                         </p>
-                        <!--Modal to show information-->
-                        <button class="contact-button" style="margin-left: 10px;">Contact Isaac</button>
                     </div>
                 </div>
           </div>
@@ -173,8 +169,9 @@
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>Isaac on Phone: 02041668463<br>
-                    Isaac on Email: Isaactimothylyne@gmail.com</p>
+                    Phone: <a href="tel:+642041668463">02041668463</a>
+                    <br>
+                    Email: <a href="mailto:isaacl@enlock.co.nz">Isaacl@enlock.co.nz</a>
                 </div>
             </div>
         </div>
