Fully Finished Navigation Menu

--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -97,7 +97,7 @@
                   whatever it takes to deliver a desirable, and satisfying end product.<br>
                 <br>ENlock delivers true value to all types of businesses.</p>
                 
-                    <button class="btn-learnmore"><span>Learn More</span></button>
+                <input type="button" class="btn-learnmore" value="Learn More!" onclick="window.location.href='services.html'">
                 </div>
             </div>
         </div>
