--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -125,7 +125,7 @@
                     <div class="about-Enlock-Home-text">
                         <h4>Chris Cook</h4>
                         
-                        <img src="resources/blank-portrait.jpg" style="float: left;">
+                        <img src="resources/blank-portrait.jpg" style="float: left; padding-left: 20px;">
                         <p class="bio">
 
                         </p>
