case studies with tony

--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -95,15 +95,22 @@
    </body>
    <footer>
       <div class="container">
-         <div class="row">
-            <div class="col-xl">
-               <h3>SIGN UP FOR OUR NEWSLETTER:</h3>
-            </div>
-            <div class="col-xl">
-               <h3>CONTACT US:</h3>
-               <p>0800SuckYourMum</p>
-            </div>
-         </div>
+          <div class="row">
+              <div class="col-xl">
+                  <h3>SIGN UP FOR OUR NEWSLETTER:</h3>
+                  <form>
+                     Email: <input> <button>Sign Up</button>
+                  </form>
+                  
+              </div>
+              <div class="col-xl">
+                  <h3>CONTACT US:</h3>
+                  Phone: <a href="tel:+642041668463">02041668463</a>
+                  <br>
+                  Email: <a href="mailto:isaacl@enlock.co.nz">Isaacl@enlock.co.nz</a>
+              </div>
+          </div>
       </div>
-   </footer>
+  </footer>
+  <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
 </html>
