--- a/EnLock-Web/contact.html
+++ b/EnLock-Web/contact.html
@@ -93,13 +93,19 @@
             <div class="row">
                 <div class="col-xl">
                     <h3>SIGN UP FOR OUR NEWSLETTER:</h3>
+                    <form>
+                       Email: <input> <button>Sign Up</button>
+                    </form>
                     
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>02041668463</p>
+                    Phone: <a href="tel:+642041668463">02041668463</a>
+                    <br>
+                    Email: <a href="mailto:isaacl@enlock.co.nz">Isaacl@enlock.co.nz</a>
                 </div>
             </div>
         </div>
     </footer>
+    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
 </html>
