--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -122,10 +122,10 @@
           <h1 class="about-header">About Enlock</h1>
             <div class="row">
                 <div class="col-xl about-Enlock-Home">
-                    <div class="about-Enlock-Home-text">
+                    <div class="about-Enlock-Home-text" style=" padding-left: 20px;">
                         <h4>Chris Cook</h4>
                         
-                        <img src="resources/blank-portrait.jpg" style="float: left; padding-left: 20px;">
+                        <img src="resources/blank-portrait.jpg" style="float: left;">
                         <p class="bio">
 
                         </p>
