--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -108,10 +108,12 @@
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>Ph: 02041668463<br>
-                    Email: Isaactimothylyne@gmail.com</p>
+                    Phone: <a href="tel:+642041668463">02041668463</a>
+                    <br>
+                    Email: <a href="mailto:isaacl@enlock.co.nz">Isaacl@enlock.co.nz</a>
                 </div>
             </div>
         </div>
     </footer>
+    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
 </html>
