--- a/EnLock-Web/case studies.html
+++ b/EnLock-Web/case studies.html
@@ -55,12 +55,31 @@
                     <img src="resources/coding.jpeg" class="Services-Banner">
                     <div class="container">
                                 <h1>
-                                    Tailored IT Solutions
+                                    Case Studies
                                 </h1>
+
+                                
+                                <h2>Current Projects</h2>
                                 <p>
-                                    At Enlock we understand that not everything with technology can be straight forward, that is why <br>
-                                    we dedicate ourselves to being able to undertake any sort of task no matter the problem, being honest<br>
-                                    and trustworthy communicating with clients along the way.
+                                    Tony Lyne's Tailored Model Construction!
+
+                                    Tony is a succesful business man, being the head of southern practice at <a href="Deptive.co.nz">Deptive</a> and winning multiple award Throughout
+                                    his career, one being an MVP at HP (Hewlet Packard).<br>
+                                    In Tony's spare time now he likes to create minature scale cars from scratch, realising he has quite a knack for it, we have been asked to make a website
+                                    where people can order thier own minature versions of thier own cars.
+                                    <br><img src="resources/Tony- Car.jpg"><br>
+                                    To follow this project keep checking up on this page to see where our proggression is!
+                                </p>
+                                <h4>Progress</h4>
+
+                                <progress value="5" max="100" style="width: 100%;"> 
+                                </progress>
+                                <br>
+                                <br>
+                                <br>
+                                <h2>Past Projects</h2>
+                                <p>
+                                    Get your projects advertised here when your project is finished with us!
                                 </p>
                             </div>
                         </div>
@@ -77,13 +96,19 @@
             <div class="row">
                 <div class="col-xl">
                     <h3>SIGN UP FOR OUR NEWSLETTER:</h3>
+                    <form>
+                       Email: <input> <button>Sign Up</button>
+                    </form>
                     
                 </div>
                 <div class="col-xl">
                     <h3>CONTACT US:</h3>
-                    <p>0800SuckYourMum</p>
+                    Phone: <a href="tel:+642041668463">02041668463</a>
+                    <br>
+                    Email: <a href="mailto:isaacl@enlock.co.nz">Isaacl@enlock.co.nz</a>
                 </div>
             </div>
         </div>
     </footer>
+    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
 </html>
