--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -58,25 +58,25 @@
                     <div class="container overlay-container">
                         <div class="row">
                             <div class="col-xl">
-                                <i class="fas fa-desktop fa-7x"></i>
+                                <a href="" class="services-button"><i class="fas fa-desktop fa-7x"></i></a>
                                 <h1>Building Custom PC</h1>
                                 <p> Our teams extensive knowledge of part compatibility and what is required for a PC to perform your required task, makes us a perfect choice to build your needed custom PC's whatever the task it shall perform.</p>
                             </div>
                             <div class="col-xl">
-                                <i class="fas fa-database fa-7x"></i>
+                                <a href="" class="services-button"><i class="fas fa-database fa-7x"></i></a>
                                 <h1>Database creation</h1>
                                 <p>With our teams training in Database Development and Data Entry, we are fit to create and design proffesional databases for you and your business, whatever you may need it for. For online shopping to employee stats, we are able to meet your task</p>
                             </div>
                         </div>
                         <div class="row">
                             <div class="col-xl">
-                                <i class="fas fa-laptop-code fa-7x"></i>
+                                <a href="" class="services-button"><i class="fas fa-laptop-code fa-7x"></i></a>
                                 <h1>Software Development</h1>
                                 <p>Our employees experience in software development and integrations through software make us one of the best choices for the developers of your software. With ability to link software to APIs and thirdparty software such as powershell, and windows 
                                     services, even to run powershell & command promt lines on remote servers, we feel we are equipped with the knowledge and ability to bring your software ideas to life.</p>
                             </div>
                             <div class="col-xl">
-                                <i class="fas fa-laptop-house fa-7x"></i>
+                                <a href="" class="services-button"><i class="fas fa-laptop-house fa-7x"></i></a>
                                 <h1>Website/Media Design & Development</h1>
                                 <p>Through making a sms for cornerstone christian school, creating business websites including for resteraunts. With years of knowledge making web apps and APIs for personal use, public use and for businesses, we feel we are fully ready and prepared to tackle and task thrown at us.</p>
                             </div>
