--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -74,12 +74,14 @@
                                     Christopher Cook
                                 </h1>
                                 <h2>Head of northern practice</h2>
+                                <img src="resources/blank-portrait.jpg" style="float: left; height: 600px;">
                             </div>
                             <div class="col-xl">
                                 <h1>
                                     Isaac Lyne
                                 </h1>
                                 <h2>Head of southern practice</h2>
+                                <img src="resources/PhotoOfIsaac.jpg" style="float: left; height: 600px;">
                             </div>
                         </div>
                   </div>
