Update of navigation
Removed News page on navigation as no need for a blog really

--- a/EnLock-Web/contact.html
+++ b/EnLock-Web/contact.html
@@ -39,9 +39,6 @@
                                     <a href="case studies.html">Case Studies</a>
                                 </li>
                                 <li>
-                                    <a href="news.html">News</a>
-                                </li>
-                                <li>
                                     <a href="contact.html">Contact</a>
                                 </li>
                             </ul>
@@ -67,6 +64,8 @@
                                     
                                         <label for="country">Country</label>
                                         <select id="country" name="country">
+                                        <option value="australia">Australia</option>
+                                        <option value="australia">New Zealand</option>
                                         <option value="australia">Australia</option>
                                         <option value="canada">Canada</option>
                                         <option value="usa">USA</option>
