Footer - Email change
Change from isaacl - CEO in contact section of footer

--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -107,7 +107,7 @@
                     <h3>CONTACT US:</h3>
                     Phone: <a href="tel:+642041668463">02041668463</a>
                     <br>
-                    Email: <a href="mailto:isaacl@enlock.co.nz">Isaacl@enlock.co.nz</a>
+                    Email: <a href="mailto:isaacl@enlock.co.nz">ceo@enlock.co.nz</a>
                 </div>
             </div>
         </div>
