--- a/EnLock-Web/contact.html
+++ b/EnLock-Web/contact.html
@@ -11,7 +11,7 @@
         <link rel="icon" href="favicon.ico">
         <script src="Scripts/GoogleAPI1.js"></script>
         <script src="Scripts/main.js"></script>
-        <title>Enlock ITS - Home</title>
+        <title>Enlock ITS - Contact</title>
     </head>
     <body>
         <div class="top">
@@ -19,7 +19,7 @@
                 <div class="topbar">
                     <nav>
                         <div class="topbar-logo">
-                            <a href="">
+                            <a href="index.html">
                                <img src="resources/Logo.png" alt="logo">
                             </a>
                         </div>
@@ -106,5 +106,5 @@
             </div>
         </div>
     </footer>
-    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
+    <p class="Copyright-Statement">© 2021 ENlock ITS. All Rights Reserved.</p>
 </html>
