--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -21,7 +21,7 @@
                 <div class="topbar">
                     <nav>
                         <div class="topbar-logo">
-                            <a href="">
+                            <a href="index.html">
                                <img src="resources/Logo.png" alt="logo">
                             </a>
                         </div>
@@ -173,5 +173,5 @@
             </div>
         </div>
     </footer>
-    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
+    <p class="Copyright-Statement">© 2021 ENlock ITS. All Rights Reserved.</p>
 </html>
