--- a/EnLock-Web/services.html
+++ b/EnLock-Web/services.html
@@ -12,7 +12,7 @@
         <link rel="icon" href="favicon.ico">
         <script src="Scripts/GoogleAPI1.js"></script>
         <script src="Scripts/main.js"></script>
-        <title>Enlock ITS - Home</title>
+        <title>Enlock ITS - Services</title>
     </head>
     <body>
         <div class="top">
@@ -20,7 +20,7 @@
                 <div class="topbar">
                     <nav>
                         <div class="topbar-logo">
-                            <a href="">
+                            <a href="index.html">
                                <img src="resources/Logo.png" alt="logo">
                             </a>
                         </div>
@@ -112,5 +112,5 @@
             </div>
         </div>
     </footer>
-    <p class="Copyright-Statement">© 2021 ENlock. All Rights Reserved.</p>
+    <p class="Copyright-Statement">© 2021 ENlock ITS. All Rights Reserved.</p>
 </html>
