About, linkedin support

--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -9,6 +9,7 @@
         <!--Browser Icon for web page-->
         <link rel="icon" href="favicon.ico">
         <!--Scripts in scripts Folder-->
+        <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
         <script src="Scripts/AOSscript.js"></script>
         <script src="Scripts/GoogleAPI1.js"></script>
         <script src="Scripts/responsiveSlides.min.js"></script>
