--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -7,6 +7,7 @@
       <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
       <!--Browser Icon for web page-->
+      <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
       <link rel="icon" href="favicon.ico">
       <script src="Scripts/GoogleAPI1.js"></script>
       <script src="Scripts/main.js"></script>
@@ -78,7 +79,7 @@
                                     Isaac Lyne
                                 </h1>
                                 <h2>Head of southern practice</h2>
-                                <img src="resources/PhotoOfIsaac.jpg" style="float: left; height: 600px;">
+                                <div class="LI-profile-badge"  data-version="v1" data-size="large" data-locale="en_US" data-type="horizontal" data-theme="dark" data-vanity="lyneisaac"><a class="LI-simple-link" href='https://nz.linkedin.com/in/lyneisaac?trk=profile-badge'>Isaac Lyne</a></div>
                             </div>
                         </div>
                   </div>
