--- a/EnLock-Web/index.html
+++ b/EnLock-Web/index.html
@@ -123,10 +123,10 @@
                     <div class="about-Enlock-Home-text" style=" padding-left: 20px;">
                         <h4>Chris Cook</h4>
                         
-                        <img src="resources/ChrisPhoto.jpg" style="float: left;">
+                        <img src="resources/Chris.jpg" style="float: left;">
                         <p class="bio">Even before he started school, Chris was able to disconnect and set up the family computer without help, so it's safe to say he has been interested in IT from a very young age.
                             While most of his younger years were spent doing typical young people things, once he left high school he rediscovered his passion for computers and everything to do with them.<br><br>
-                            He started study a bit late at the age of 26, gaining his certificate in IT Essentials at the Universal College of Learning in Palmerston North at the end of 202, moving on to study the Diploma the next year.<br><br>
+                            He started study a bit late at the age of 26, gaining his certificate in IT Essentials at the Universal College of Learning in Palmerston North at the end of 2020, moving on to study the Diploma the next year.<br><br>
                             In Chris' spare time, he enjoys spending time with his young son, listening to music and has recently started to stream on Twitch.
 
 
