padding to about linkedin links

--- a/EnLock-Web/about.html
+++ b/EnLock-Web/about.html
@@ -66,7 +66,7 @@
                      </p>
                   </div>
                   <div class="container">
-                    <div class="row" >
+                    <div class="row" style="padding-bottom: 50px;">
                             <div class="col-xl">
                                 <h1>
                                     Christopher Cook
