--- a/EnLock-Web/contact.html
+++ b/EnLock-Web/contact.html
@@ -74,7 +74,7 @@
                                         <label for="subject">Subject</label>
                                         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
                                     
-                                        <input type="submit" value="Submit">
+                                        <input type="submit" value="Submit" onclick="">
                                     </form>
                                 </div>
                             </div>
