added browser favicon
Added favicon for maintenance

--- a/Maintenance Page/maintenance.html
+++ b/Maintenance Page/maintenance.html
@@ -4,6 +4,8 @@
         <title>Enlock ITS</title>
         <link rel="stylesheet" href="main.css">
         
+        <link rel="icon" href="favicon.ico">
+        
         <meta charset="UTF-8">
         <meta name="description" content="Enlock I.T. Solutions">
         <meta name="keywords" content="">
